# etf-app

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
skills/sqlite-data-app-release/: SKILL.md
src/etf_app/: __init__.py  amundi_enrich.py  api.py  avantis_kid_enrich.py  cli.py  completeness.py  db_bootstrap.py  deploy_artifact.py  deploy_db.py  ft_enrich.py  gold_fee_enrich.py  ishares_enrich.py  issuer_fee_enrich.py  issuer_normalize.py  kid_ingest.py  listing_hygiene.py  listing_ingest.py  profile.py  recommend.py  seed_avantis_listings.py  taxonomy.py  universe_refine.py
tests/: conftest.py  test_amundi_enrich.py  test_api.py  test_avantis_kid_enrich.py  test_cli.py  test_completeness.py  test_db_bootstrap.py  test_deploy_artifact.py  test_deploy_db.py  test_ft_enrich.py  test_ishares_enrich.py  test_issuer_fee_enrich.py  test_issuer_normalize.py  test_kid_ingest.py  test_listing_ingest.py  test_profile.py  test_recommend.py  test_taxonomy.py
