[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etf-app"
version = "0.1.0"
description = "UCITS ETF ingestion and data pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "requests>=2.32",
  "xlrd==2.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[project.scripts]
etf-pipeline = "etf_app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
